Компоненты старого интерфейса вынесены в отдельный пакет

--- a/way2mars/admin_tools/ТестовыйКлиент/ТестовоеКлиентскоеПриложение.yaml
+++ b/way2mars/admin_tools/ТестовыйКлиент/ТестовоеКлиентскоеПриложение.yaml
@@ -4,8 +4,8 @@
 Имя: ТестовоеКлиентскоеПриложение
 Импорт:
     - way2mars::АдминкаLib::Интерфейс
+    - way2mars::АдминкаLib::Интерфейс::СтарыйИнтерфейс
     - way2mars::АдминкаLib::КлючиДоступа
-    - ТестовыеМетаданные
 Наследует:
     Тип: СтандартноеКлиентскоеПриложениеСРазделами
     КомандныйИнтерфейсПанелиНавигации:
@@ -14,12 +14,12 @@
             -
                 Тип: НавигационнаяКоманда
                 Изображение: БагКонтур.svg
-                Представление: Админка
+                Представление: Админка old
                 ТипФормы: ФормаМетаданные
             -
                 Тип: НавигационнаяКоманда
                 Изображение: БагКонтур.svg
-                Представление: Админка-2
+                Представление: Админка new
                 ТипФормы: ФормаСпискаМетаданных
             -
                 Тип: НавигационнаяКоманда
