--- a/way2mars/admin_tools/ТестовыеМетаданные/Документище.yaml
+++ b/way2mars/admin_tools/ТестовыеМетаданные/Документище.yaml
@@ -1,7 +1,14 @@
 ВидЭлемента: Документ
-ОбластьВидимости: ВПодсистеме
 Ид: b3d2e351-16f6-4b54-8990-86ea1fb8a5db
 Имя: Документище
+ОбластьВидимости: ВПодсистеме
+КонтрольДоступа:
+    Разрешения:
+        Изменение: РазрешеноАдминистраторам
+        ПоУмолчанию: РазрешеноАдминистраторам
+        Создание: РазрешеноАдминистраторам
+        Удаление: РазрешеноАдминистраторам
+        Чтение: РазрешеноАдминистраторам
 Реквизиты:
     -
         Имя: Дата
