--- a/way2mars/admin_tools/ТестовыеМетаданные/СправочникУуид7.yaml
+++ b/way2mars/admin_tools/ТестовыеМетаданные/СправочникУуид7.yaml
@@ -6,6 +6,13 @@
     ВключатьВАвтоИнтерфейс: Истина
     Объект:
         Форма: СправочникУуид7ФормаОбъекта
+КонтрольДоступа:
+    Разрешения:
+        Изменение: РазрешеноАдминистраторам
+        ПоУмолчанию: РазрешеноАдминистраторам
+        Создание: РазрешеноАдминистраторам
+        Удаление: РазрешеноАдминистраторам
+        Чтение: РазрешеноАдминистраторам
 Реквизиты:
     -
         Имя: Наименование
