Работы с формой объекта пользователя

--- a/way2mars/АдминкаLib/Пользователи/ФормаСпискаПользователей.yaml
+++ b/way2mars/АдминкаLib/Пользователи/ФормаСпискаПользователей.yaml
@@ -1,6 +1,6 @@
 ВидЭлемента: КомпонентИнтерфейса
 Ид: 3038f1af-0afc-509b-97d7-3bd8e8d3c42b
-Имя: ФормаПользователи
+Имя: ФормаСпискаПользователей
 ОбластьВидимости: ВПроекте
 Наследует:
     Тип: Форма
