Работы с формой объекта пользователя

--- a/way2mars/АдминкаLib/Пользователи/СвойстваПользователя.yaml
+++ b/way2mars/АдминкаLib/Пользователи/СвойстваПользователя.yaml
@@ -27,7 +27,7 @@
         Тип: Булево
         Обязательное: Истина
     -
-        Имя: ИдентификаторПользователяНаСервера
+        Имя: ИдентификаторПользователяНаСервере
         Тип: ИдПользователя
         Обязательное: Истина
     -
