--- a/way2mars/АдминкаLib/Пользователи/ФормаСпискаПользователей.yaml
+++ b/way2mars/АдминкаLib/Пользователи/ФормаСпискаПользователей.yaml
@@ -9,7 +9,7 @@
         Тип: ПроизвольныйШаблонФормы
         Имя: ПроизвольныйШаблонФормы1
         Содержимое:
-            Тип: Таблица<ДинамическийСписок<ФормаПользователи.ДанныеСтроки>>
+            Тип: Таблица<ДинамическийСписок<ФормаСпискаПользователей.ДанныеСтроки>>
             Имя: Таблица1
             ПриНажатииСтроки: Таблица1ПриНажатииСтроки
             РастягиватьПоГоризонтали: Истина
@@ -41,30 +41,30 @@
                         Выражение: ЛокальФорматирования
             Колонки:
                 -
-                    Тип: СтандартнаяКолонкаТаблицы<СтрокаДинамическогоСписка<ФормаПользователи.ДанныеСтроки>>
+                    Тип: СтандартнаяКолонкаТаблицы<СтрокаДинамическогоСписка<ФормаСпискаПользователей.ДанныеСтроки>>
                     Имя: Ссылка
                     ПолеЗначения: Ссылка
                 -
-                    Тип: СтандартнаяКолонкаТаблицы<СтрокаДинамическогоСписка<ФормаПользователи.ДанныеСтроки>>
+                    Тип: СтандартнаяКолонкаТаблицы<СтрокаДинамическогоСписка<ФормаСпискаПользователей.ДанныеСтроки>>
                     Имя: Админ
                     ПолеЗначения: Администратор
                 -
-                    Тип: СтандартнаяКолонкаТаблицы<СтрокаДинамическогоСписка<ФормаПользователи.ДанныеСтроки>>
+                    Тип: СтандартнаяКолонкаТаблицы<СтрокаДинамическогоСписка<ФормаСпискаПользователей.ДанныеСтроки>>
                     Имя: БылУспешныйВход
                     ПолеЗначения: БылУспешныйВход
                 -
-                    Тип: СтандартнаяКолонкаТаблицы<СтрокаДинамическогоСписка<ФормаПользователи.ДанныеСтроки>>
+                    Тип: СтандартнаяКолонкаТаблицы<СтрокаДинамическогоСписка<ФормаСпискаПользователей.ДанныеСтроки>>
                     Имя: ЗапрещенВход
                     ПолеЗначения: ЗапрещенВход
                 -
-                    Тип: СтандартнаяКолонкаТаблицы<СтрокаДинамическогоСписка<ФормаПользователи.ДанныеСтроки>>
+                    Тип: СтандартнаяКолонкаТаблицы<СтрокаДинамическогоСписка<ФормаСпискаПользователей.ДанныеСтроки>>
                     Имя: РазрешенДоступПоТокену
                     ПолеЗначения: РазрешенДоступПоТокену
                 -
-                    Тип: СтандартнаяКолонкаТаблицы<СтрокаДинамическогоСписка<ФормаПользователи.ДанныеСтроки>>
+                    Тип: СтандартнаяКолонкаТаблицы<СтрокаДинамическогоСписка<ФормаСпискаПользователей.ДанныеСтроки>>
                     Имя: ЛокальОтображения
                     ПолеЗначения: ЛокальОтображения
                 -
-                    Тип: СтандартнаяКолонкаТаблицы<СтрокаДинамическогоСписка<ФормаПользователи.ДанныеСтроки>>
+                    Тип: СтандартнаяКолонкаТаблицы<СтрокаДинамическогоСписка<ФормаСпискаПользователей.ДанныеСтроки>>
                     Имя: ЛокальФорматирования
                     ПолеЗначения: ЛокальФорматирования
