Доработана локаль пользователя

--- a/way2mars/АдминкаLib/Пользователи/СвойстваПользователя.yaml
+++ b/way2mars/АдминкаLib/Пользователи/СвойстваПользователя.yaml
@@ -6,10 +6,10 @@
 Поля:
     -
         Имя: ЛокальОтображения
-        Тип: СвойстваЛокали?
+        Тип: Локаль?
     -
         Имя: ЛокальФорматирования
-        Тип: СвойстваЛокали?
+        Тип: Локаль?
     -
         Имя: Администратор
         Тип: Булево
