--- a/way2mars/АдминкаLib/Пользователи/ФормаОбъектаПользователь.yaml
+++ b/way2mars/АдминкаLib/Пользователи/ФормаОбъектаПользователь.yaml
@@ -24,6 +24,9 @@
                 ПредставлениеНеактивного: Просмотр
     ОсновнаяКоманда:
         Тип: ОбычнаяКоманда
+        Важность: Обычная
+        Видимость: Истина
+        Доступность: Истина
         Изображение: СохранитьКонтур.svg
         Обработчик: ЗаписатьИзмененияОбработчик
         ОпасностьДействия: Высокая
@@ -37,6 +40,7 @@
             Содержимое:
                 -
                     Тип: Группа
+                    ВыравниваниеСодержимогоПоВертикали: Центр
                     ОтступПоВертикали: Половинный
                     ОтступПоГоризонтали: Половинный
                     Рамка: Истина
@@ -72,29 +76,48 @@
                     ОтступПоГоризонтали: Половинный
                     Рамка: Истина
                     ЦветРамки: =Цвета.Стилевые.Текст
+                    Доступность: =СвойстваЗагружены
                     Содержимое:
                         -
-                            Тип: КомпонентЛокаль
-                            Имя: ЛокальОтображения
+                            Тип: ПолеВвода<Локаль?>
                             Заголовок: Локаль отображения
-                            РазрешитьПравки: =РазрешитьПравки
-                            Локаль: =ПередатьСвойстваЛокали(Свойства.ЛокальОтображения)
+                            Значение: =Свойства.ЛокальОтображения
+                            РежимВыбораИзСписка: ТолькоЗначенияИзСписка
+                            ТолькоЧтение: =не РазрешитьПравки
+                            ДопустимыеТипы:
+                                - Локаль
+                                - Неопределено
+                            СписокВыбора: =СписокЛокалей
                         -
-                            Тип: КомпонентЛокаль
-                            Имя: ЛокальФорматирования
+                            Тип: ПолеВвода<Локаль?>
                             Заголовок: Локаль форматирования
-                            РазрешитьПравки: =РазрешитьПравки
-                            Локаль: =ПередатьСвойстваЛокали(Свойства.ЛокальФорматирования)
+                            Значение: =Свойства.ЛокальФорматирования
+                            РежимВыбораИзСписка: ТолькоЗначенияИзСписка
+                            ТолькоЧтение: =не РазрешитьПравки
+                            ДопустимыеТипы:
+                                - Локаль
+                                - Неопределено
+                            СписокВыбора: =СписокЛокалей
                         -
-                            Тип: КомпонентЛокаль
-                            Заголовок: System локаль отображения
-                            РазрешитьПравки: Ложь
-                            Локаль: =ПередатьЛокаль(Локаль.ТекущаяЛокальОтображения())
+                            Тип: ПолеВвода<Локаль?>
+                            Заголовок: Системная локаль отображения
+                            Значение: =Локаль.ТекущаяЛокальОтображения()
+                            РежимВыбораИзСписка: ТолькоЗначенияИзСписка
+                            ТолькоЧтение: Истина
+                            ДопустимыеТипы:
+                                - Локаль
+                                - Неопределено
+                            СписокВыбора: =СписокЛокалей
                         -
-                            Тип: КомпонентЛокаль
-                            Заголовок: System локаль форматирования
-                            РазрешитьПравки: Ложь
-                            Локаль: =ПередатьЛокаль(Локаль.ТекущаяЛокальФорматирования())
+                            Тип: ПолеВвода<Локаль?>
+                            Заголовок: Системная локаль форматирования
+                            Значение: =Локаль.ТекущаяЛокальФорматирования()
+                            РежимВыбораИзСписка: ТолькоЗначенияИзСписка
+                            ТолькоЧтение: Истина
+                            ДопустимыеТипы:
+                                - Локаль
+                                - Неопределено
+                            СписокВыбора: =СписокЛокалей
 Свойства:
     -
         Имя: Пользователь
@@ -107,11 +130,11 @@
             БылУспешныйВход: Истина
             ЗапрещенВход: Ложь
             ИдентификаторПользователяНаСервере: =новый ИдПользователя(Ууид{}, Ууид{})
+            ЛокальОтображения: =Неопределено
+            ЛокальФорматирования: =Неопределено
             Представление: =""
             РазрешенДоступПоТокену: Ложь
             Ссылка: =новый Пользователи.Ссылка(Ууид{})
-            ЛокальОтображения: =Неопределено
-            ЛокальФорматирования: =Неопределено
     -
         Имя: РазрешитьПравки
         Тип: Булево
@@ -120,3 +143,7 @@
         Имя: СвойстваЗагружены
         Тип: Булево
         ЗначениеПоУмолчанию: Ложь
+    -
+        Имя: СписокЛокалей
+        Тип: Массив<ЭлементСпискаЗначений<Локаль?>>
+        ЗначениеПоУмолчанию: =СписокЛокалей()
