работа с методами пользователя

--- a/way2mars/АдминкаLib/Пользователи/СвойстваПоставщикаАутентификации.yaml
+++ b/way2mars/АдминкаLib/Пользователи/СвойстваПоставщикаАутентификации.yaml
@@ -1,7 +1,7 @@
 ВидЭлемента: Структура
-ОбластьВидимости: ВПодсистеме
 Ид: cca54e8e-21ae-4c93-97e9-02d37d0a660b
-Имя: ПоставщикАутентификации
+Имя: СвойстваПоставщикаАутентификации
+ОбластьВидимости: ВПодсистеме
 Окружение: КлиентИСервер
 Поля:
     -
