--- a/way2mars/АдминкаLib/Пользователи/СвойстваУтвержденияПользователя.yaml
+++ b/way2mars/АдминкаLib/Пользователи/СвойстваУтвержденияПользователя.yaml
@@ -1,7 +1,7 @@
 ВидЭлемента: Структура
-ОбластьВидимости: ВПодсистеме
 Ид: c486df25-67ac-4d7f-b44f-25e5fdeb69bb
-Имя: УтверждениеПользователя
+Имя: СвойстваУтвержденияПользователя
+ОбластьВидимости: ВПодсистеме
 Окружение: КлиентИСервер
 Поля:
     -
