работа с методами пользователя

--- a/way2mars/АдминкаLib/Пользователи/СвойстваПользователя.yaml
+++ b/way2mars/АдминкаLib/Пользователи/СвойстваПользователя.yaml
@@ -20,7 +20,7 @@
         Обязательное: Истина
     -
         Имя: ДанныеАутентификации
-        Тип: Массив<ПоставщикАутентификации>
+        Тип: Массив<СвойстваПоставщикаАутентификации>
         ЗначениеПоУмолчанию: [ ]
     -
         Имя: ЗапрещенВход
@@ -28,7 +28,7 @@
         Обязательное: Истина
     -
         Имя: ИдентификаторПользователяНаСервере
-        Тип: ИдПользователя
+        Тип: ИдПользователя?
         Обязательное: Истина
     -
         Имя: Представление
@@ -40,9 +40,9 @@
         Обязательное: Истина
     -
         Имя: Ссылка
-        Тип: Пользователи.Ссылка
+        Тип: Пользователи.Ссылка?
         Обязательное: Истина
     -
         Имя: Утверждения
-        Тип: Массив<УтверждениеПользователя>
+        Тип: Массив<СвойстваУтвержденияПользователя>
         ЗначениеПоУмолчанию: [ ]
