--- a/way2mars/АдминкаLib/Пользователи/СвойстваУтвержденияПользователя.yaml
+++ b/way2mars/АдминкаLib/Пользователи/СвойстваУтвержденияПользователя.yaml
@@ -5,7 +5,7 @@
 Окружение: КлиентИСервер
 Поля:
     -
-        Имя: Утвеждение
+        Имя: Утверждение
         Тип: Строка
     -
         Имя: Значение
