--- a/way2mars/АдминкаLib/Пользователи/ФормаОбъектаПользователь.yaml
+++ b/way2mars/АдминкаLib/Пользователи/ФормаОбъектаПользователь.yaml
@@ -2,6 +2,8 @@
 Ид: c9358dc9-34de-4503-b368-923f15773daa
 Имя: ФормаОбъектаПользователь
 ОбластьВидимости: ВПодсистеме
+Импорт:
+    - Интерфейс
 Наследует:
     Тип: Форма
     ВключатьВАвтоИнтерфейс: Ложь
@@ -36,7 +38,9 @@
         Содержимое:
             Тип: Группа
             Компоновка: Вертикальная
-            ОтображатьРазделитель: Истина
+            ОтображатьРазделитель:
+                Тип: Авто
+                Значение: Auto
             Содержимое:
                 -
                     Тип: Группа
@@ -72,11 +76,11 @@
                             ТолькоЧтение: =не РазрешитьПравки
                 -
                     Тип: Группа
+                    Доступность: =СвойстваЗагружены
                     ОтступПоВертикали: Одинарный
                     ОтступПоГоризонтали: Половинный
                     Рамка: Истина
                     ЦветРамки: =Цвета.Стилевые.Текст
-                    Доступность: =СвойстваЗагружены
                     Содержимое:
                         -
                             Тип: ПолеВвода<Локаль?>
@@ -118,6 +122,99 @@
                                 - Локаль
                                 - Неопределено
                             СписокВыбора: =СписокЛокалей
+                -
+                    Тип: Группа
+                    Имя: Группа1
+                    ОтступПоВертикали: Половинный
+                    ОтступПоГоризонтали: Половинный
+                    Рамка: Истина
+                    ЦветРамки: =Цвета.Стилевые.Текст
+                    Содержимое:
+                        -
+                            Тип: ПолеВвода<Ууид?>
+                            Заголовок: Идентификатор пользователя (Сервер)
+                            Значение: =Свойства.ИдентификаторПользователяНаСервере?.Ид
+                            ТолькоЧтение: Истина
+                            ШиринаВКолонках: Двойная
+                        -
+                            Тип: ПолеВвода<Ууид?>
+                            Заголовок: Идентификатор списка пользователей
+                            Значение: =Свойства.ИдентификаторПользователяНаСервере?.ИдСписка
+                            ТолькоЧтение: Истина
+                            ШиринаВКолонках: Двойная
+                        -
+                            Тип: ПолеВвода<Ууид?>
+                            Заголовок: Идентификатор пользователя (Ссылка)
+                            Значение: =Свойства.Ссылка?.Ид
+                            ТолькоЧтение: Истина
+                            ШиринаВКолонках: Двойная
+                -
+                    Тип: Страницы
+                    ВидОтображенияЗаголовковСтраниц: Текст
+                    Страницы:
+                        -
+                            Имя: СтраницаДанныеАутентификации
+                            Заголовок: Поставщики аутентификации
+                            Содержимое:
+                                Тип: Таблица<ИсточникДанныхМассив<СвойстваПоставщикаАутентификации>>
+                                ИспользованиеПоиска:
+                                    Тип: Авто
+                                    Значение: Auto
+                                ОтображатьНастройки: Ложь
+                                ТолькоЧтение: Истина
+                                Источник: =ПоставщикиАутентификации
+                                Колонки:
+                                    -
+                                        Тип: СтандартнаяКолонкаТаблицы<СвойстваПоставщикаАутентификации, Строка>
+                                        Значение: =ДанныеСтроки.Вид
+                                    -
+                                        Тип: СтандартнаяКолонкаТаблицы<СвойстваПоставщикаАутентификации, Строка>
+                                        Значение: =ДанныеСтроки.Идентификатор
+                                    -
+                                        Тип: СтандартнаяКолонкаТаблицы<СвойстваПоставщикаАутентификации, Строка>
+                                        Значение: =ДанныеСтроки.Данные
+                                ПустыеСостояния:
+                                    Тип: ПредставленияПустыхСостоянийСписка
+                                    НетДанныхДляОтображения:
+                                        Тип: ПредставлениеПустогоСостоянияСписка
+                                        Заголовок: Пусто
+                                        Изображение:
+                                            Тип: ДвоичныйОбъект.Ссылка
+                                            Значение: ФайлКонтур.svg
+                                        Пояснение: Поставщики аутентификации отсутствуют
+                        -
+                            Имя: СтраницаУтверждения
+                            Заголовок: Утверждения
+                            Содержимое:
+                                Тип: Таблица<ИсточникДанныхМассив<СвойстваУтвержденияПользователя>>
+                                Имя: ТаблицаУтверждения
+                                ОтображатьНастройки: Ложь
+                                ТолькоЧтение: =не РазрешитьПравки
+                                Источник: =Утверждения
+                                Колонки:
+                                    -
+                                        Тип: СтандартнаяКолонкаТаблицы<СвойстваУтвержденияПользователя, Строка>
+                                        Значение: =ДанныеСтроки.Утверждение
+                                    -
+                                        Тип: СтандартнаяКолонкаТаблицы<СвойстваУтвержденияПользователя, Строка>
+                                        Значение: =ДанныеСтроки.Значение
+                                Команды:
+                                    Тип: ФрагментКомандногоИнтерфейса
+                                    Элементы:
+                                        - =Компоненты.ТаблицаУтверждения.ДобавитьСтроку
+                                КомандыСтроки:
+                                    Тип: ФрагментКомандногоИнтерфейса<КомандаСПараметром<СвойстваУтвержденияПользователя>>
+                                    Элементы:
+                                        - =Компоненты.ТаблицаУтверждения.Удалить
+                                ПустыеСостояния:
+                                    Тип: ПредставленияПустыхСостоянийСписка
+                                    НетДанныхДляОтображения:
+                                        Тип: ПредставлениеПустогоСостоянияСписка
+                                        Заголовок: Пусто
+                                        Изображение:
+                                            Тип: ДвоичныйОбъект.Ссылка
+                                            Значение: ФайлКонтур.svg
+                                        Пояснение: Утверждения пользователя отсутствуют
 Свойства:
     -
         Имя: Пользователь
@@ -129,12 +226,12 @@
             Администратор: Ложь
             БылУспешныйВход: Истина
             ЗапрещенВход: Ложь
-            ИдентификаторПользователяНаСервере: =новый ИдПользователя(Ууид{}, Ууид{})
+            ИдентификаторПользователяНаСервере: =Неопределено
             ЛокальОтображения: =Неопределено
             ЛокальФорматирования: =Неопределено
             Представление: =""
             РазрешенДоступПоТокену: Ложь
-            Ссылка: =новый Пользователи.Ссылка(Ууид{})
+            Ссылка: =Неопределено
     -
         Имя: РазрешитьПравки
         Тип: Булево
@@ -147,3 +244,9 @@
         Имя: СписокЛокалей
         Тип: Массив<ЭлементСпискаЗначений<Локаль?>>
         ЗначениеПоУмолчанию: =СписокЛокалей()
+    -
+        Имя: ПоставщикиАутентификации
+        Тип: ИсточникДанныхМассив<СвойстваПоставщикаАутентификации>
+    -
+        Имя: Утверждения
+        Тип: ИсточникДанныхМассив<СвойстваУтвержденияПользователя>
