форма применения изменений

--- a/way2mars/АдминкаLib/Пользователи/КомпонентСтрокаСпискаИзменений.yaml
+++ b/way2mars/АдминкаLib/Пользователи/КомпонентСтрокаСпискаИзменений.yaml
@@ -1,10 +1,9 @@
 ВидЭлемента: КомпонентИнтерфейса
-ОбластьВидимости: ВПодсистеме
 Ид: 1a728385-dc0f-4666-9891-86927034e6e5
 Имя: КомпонентСтрокаСпискаИзменений
+ОбластьВидимости: ВПодсистеме
 Наследует:
     Тип: ПроизвольныйКомпонент
-    Видимость: =Действие != Неопределено
     Содержимое:
         Тип: Группа
         Компоновка: Горизонтальная
@@ -19,13 +18,22 @@
                 РастягиватьПоГоризонтали: Истина
             -
                 Тип: Картинка
-                Изображение: неизвестный.svg
+                Видимость: =Статус==СтатусИзменения.Запущен
+                ВыравниваниеВГруппеПоВертикали: Центр
+                Изображение: запущен.svg
+                Ширина: 20
             -
                 Тип: Картинка
-                Изображение: неудача.svg
+                Видимость: =Статус==СтатусИзменения.Ошибка
+                ВыравниваниеВГруппеПоВертикали: Центр
+                Изображение: ошибка.svg
+                Ширина: 20
             -
                 Тип: Картинка
+                Видимость: =Статус==СтатусИзменения.Успех
+                ВыравниваниеВГруппеПоВертикали: Центр
                 Изображение: успех.svg
+                Ширина: 20
 Свойства:
     -
         Имя: Выбор
@@ -39,5 +47,5 @@
         Имя: Действие
         Тип: (()->Булево)?
     -
-        Имя: РезультатДействия
-        Тип: Булево?
+        Имя: Статус
+        Тип: СтатусИзменения
