--- a/way2mars/АдминкаLib/Пользователи/ФормаПримененияИзменений.yaml
+++ b/way2mars/АдминкаLib/Пользователи/ФормаПримененияИзменений.yaml
@@ -1,11 +1,24 @@
 ВидЭлемента: КомпонентИнтерфейса
-ОбластьВидимости: ВПодсистеме
 Ид: 5faaedfa-912c-4b64-9fa8-e2cbe908606e
 Имя: ФормаПримененияИзменений
+ОбластьВидимости: ВПодсистеме
 Наследует:
     Тип: Форма
     ВключатьВАвтоИнтерфейс: Ложь
+    ОсновнаяКоманда:
+        Тип: ОбычнаяКоманда
+        Доступность: =ДоступностьДействий
+        Представление: Выполнить отмеченные
+    Содержимое:
+        Тип: ПроизвольныйШаблонФормы
+        Имя: ПроизвольныйШаблонФормы1
+        Содержимое:
+            Тип: Группа
+            Имя: ГруппаСтрок
 Свойства:
     -
         Имя: СписокДействий
         Тип: ЧитаемоеСоответствие<Строка, ()->Булево>
+    -
+        Имя: ДоступностьДействий
+        Тип: Булево
