текст ошибки в применении изменений

--- a/way2mars/АдминкаLib/Пользователи/КомпонентСтрокаСпискаИзменений.yaml
+++ b/way2mars/АдминкаLib/Пользователи/КомпонентСтрокаСпискаИзменений.yaml
@@ -13,27 +13,39 @@
                 Вид: Флажок
                 Значение: =Выбор
             -
-                Тип: Надпись
-                Значение: =ИмяДействия
-                РастягиватьПоГоризонтали: Истина
-            -
-                Тип: Картинка
-                Видимость: =Статус==СтатусИзменения.Запущен
-                ВыравниваниеВГруппеПоВертикали: Центр
-                Изображение: запущен.svg
-                Ширина: 20
-            -
-                Тип: Картинка
-                Видимость: =Статус==СтатусИзменения.Ошибка
-                ВыравниваниеВГруппеПоВертикали: Центр
-                Изображение: ошибка.svg
-                Ширина: 20
-            -
-                Тип: Картинка
-                Видимость: =Статус==СтатусИзменения.Успех
-                ВыравниваниеВГруппеПоВертикали: Центр
-                Изображение: успех.svg
-                Ширина: 20
+                Тип: Группа
+                Компоновка: Вертикальная
+                Содержимое:
+                    -
+                        Тип: Надпись
+                        Значение: =ИмяДействия
+                        РастягиватьПоГоризонтали: Истина
+                    -
+                        Тип: Картинка
+                        Видимость: =Статус==СтатусИзменения.Запущен
+                        ВыравниваниеВГруппеПоВертикали: Центр
+                        Изображение: запущен.svg
+                        Ширина: 20
+                    -
+                        Тип: Картинка
+                        Видимость: =Статус==СтатусИзменения.Ошибка
+                        ВыравниваниеВГруппеПоВертикали: Центр
+                        Изображение: ошибка.svg
+                        Ширина: 20
+                    -
+                        Тип: Картинка
+                        Видимость: =Статус==СтатусИзменения.Успех
+                        ВыравниваниеВГруппеПоВертикали: Центр
+                        Изображение: успех.svg
+                        Ширина: 20
+                    -
+                        Тип: Надпись
+                        Имя: Надпись1
+                        Видимость: =Статус==СтатусИзменения.Ошибка
+                        Значение: =ТекстОшибки
+                        ОценкаИнформации: Отрицательная
+                        Шрифт:
+                            Тип: АбсолютныйШрифт
 Свойства:
     -
         Имя: Выбор
@@ -45,7 +57,10 @@
         ЗначениеПоУмолчанию: Действие
     -
         Имя: Действие
-        Тип: (()->Булево)?
+        Тип: (()->Строка?)?
     -
         Имя: Статус
         Тип: СтатусИзменения
+    -
+        Имя: ТекстОшибки
+        Тип: Строка
