--- a/way2mars/АдминкаLib/Пользователи/ФормаПримененияИзменений.yaml
+++ b/way2mars/АдминкаLib/Пользователи/ФормаПримененияИзменений.yaml
@@ -8,6 +8,7 @@
     ОсновнаяКоманда:
         Тип: ОбычнаяКоманда
         Доступность: =ДоступностьДействий
+        Обработчик: ВыполнитьОтмеченныеОбработчик
         Представление: Выполнить отмеченные
     Содержимое:
         Тип: ПроизвольныйШаблонФормы
@@ -18,7 +19,7 @@
 Свойства:
     -
         Имя: СписокДействий
-        Тип: ЧитаемоеСоответствие<Строка, ()->Булево>
+        Тип: ЧитаемоеСоответствие<Строка, ()->Строка?>
     -
         Имя: ДоступностьДействий
         Тип: Булево
