правки формы пользователя

--- a/way2mars/АдминкаLib/Пользователи/КомпонентСтрокаСпискаИзменений.yaml
+++ b/way2mars/АдминкаLib/Пользователи/КомпонентСтрокаСпискаИзменений.yaml
@@ -11,36 +11,41 @@
             -
                 Тип: Флажок
                 Вид: Флажок
+                Доступность: =Статус!=СтатусИзменения.Успех
                 Значение: =Выбор
             -
                 Тип: Группа
+                ИнтервалМеждуЭлементамиПоВертикали: Отсутствует
                 Компоновка: Вертикальная
                 Содержимое:
                     -
+                        Тип: Группа
+                        Компоновка: Горизонтальная
+                        Содержимое:
+                            -
+                                Тип: Надпись
+                                Значение: =ИмяДействия
+                                РастягиватьПоГоризонтали: Истина
+                            -
+                                Тип: Картинка
+                                Видимость: =Статус==СтатусИзменения.Запущен
+                                ВыравниваниеВГруппеПоВертикали: Центр
+                                Изображение: запущен.svg
+                                Ширина: 20
+                            -
+                                Тип: Картинка
+                                Видимость: =Статус==СтатусИзменения.Ошибка
+                                ВыравниваниеВГруппеПоВертикали: Центр
+                                Изображение: ошибка.svg
+                                Ширина: 20
+                            -
+                                Тип: Картинка
+                                Видимость: =Статус==СтатусИзменения.Успех
+                                ВыравниваниеВГруппеПоВертикали: Центр
+                                Изображение: успех.svg
+                                Ширина: 20
+                    -
                         Тип: Надпись
-                        Значение: =ИмяДействия
-                        РастягиватьПоГоризонтали: Истина
-                    -
-                        Тип: Картинка
-                        Видимость: =Статус==СтатусИзменения.Запущен
-                        ВыравниваниеВГруппеПоВертикали: Центр
-                        Изображение: запущен.svg
-                        Ширина: 20
-                    -
-                        Тип: Картинка
-                        Видимость: =Статус==СтатусИзменения.Ошибка
-                        ВыравниваниеВГруппеПоВертикали: Центр
-                        Изображение: ошибка.svg
-                        Ширина: 20
-                    -
-                        Тип: Картинка
-                        Видимость: =Статус==СтатусИзменения.Успех
-                        ВыравниваниеВГруппеПоВертикали: Центр
-                        Изображение: успех.svg
-                        Ширина: 20
-                    -
-                        Тип: Надпись
-                        Имя: Надпись1
                         Видимость: =Статус==СтатусИзменения.Ошибка
                         Значение: =ТекстОшибки
                         ОценкаИнформации: Отрицательная
