--- a/way2mars/АдминкаLib/Пользователи/ФормаОбъектаПользователь.yaml
+++ b/way2mars/АдминкаLib/Пользователи/ФормаОбъектаПользователь.yaml
@@ -24,6 +24,14 @@
                 ОпасностьДействия: Отсутствует
                 ПредставлениеАктивного: Редактирование
                 ПредставлениеНеактивного: Просмотр
+    ОбычныеКоманды:
+        Тип: ФрагментКомандногоИнтерфейса
+        Элементы:
+            -
+                Тип: ОбычнаяКоманда
+                Изображение: КлючКонтур.svg
+                Обработчик: ВыдатьТокенОбработчик
+                Представление: Выдать токен
     ОсновнаяКоманда:
         Тип: ОбычнаяКоманда
         Важность: Обычная
