Из структур убраны методы, сами структуры вынесены в отдельный пакет

--- a/way2mars/АдминкаLib/Пользователи/Структуры/СвойстваПользователя.yaml
+++ b/way2mars/АдминкаLib/Пользователи/Структуры/СвойстваПользователя.yaml
@@ -46,3 +46,7 @@
         Имя: Утверждения
         Тип: Массив<СвойстваУтвержденияПользователя>
         ЗначениеПоУмолчанию: [ ]
+    -
+        Имя: ТокеныДоступа
+        Тип: Массив<СвойстваТокенаДоступа>
+        ЗначениеПоУмолчанию: [ ]
