--- a/way2mars/АдминкаLib/Пользователи/ФормаОбъектаПользователь.yaml
+++ b/way2mars/АдминкаLib/Пользователи/ФормаОбъектаПользователь.yaml
@@ -9,6 +9,7 @@
     ВключатьВАвтоИнтерфейс: Ложь
     Доступность: =СвойстваЗагружены
     Заголовок: =Свойства.Представление
+    ШиринаВКолонках: Четверная
     ДополнительныеКоманды:
         Тип: ФрагментКомандногоИнтерфейса
         Элементы:
@@ -29,8 +30,12 @@
         Элементы:
             -
                 Тип: ОбычнаяКоманда
+                Важность: Обычная
+                Видимость: Истина
+                Доступность: Истина
                 Изображение: КлючКонтур.svg
                 Обработчик: ВыдатьТокенОбработчик
+                ОпасностьДействия: Отсутствует
                 Представление: Выдать токен
     ОсновнаяКоманда:
         Тип: ОбычнаяКоманда
@@ -223,6 +228,42 @@
                                             Тип: ДвоичныйОбъект.Ссылка
                                             Значение: ФайлКонтур.svg
                                         Пояснение: Утверждения пользователя отсутствуют
+                        -
+                            Имя: СтраницаТокеныДоступа
+                            Заголовок: Токены доступа
+                            Содержимое:
+                                Тип: Таблица<ИсточникДанныхМассив<СвойстваТокенаДоступа>>
+                                Имя: ТаблицаТокеныДоступа
+                                ОтображатьНастройки: Ложь
+                                ТолькоЧтение: =не РазрешитьПравки
+                                Источник: =ТокеныДоступа
+                                Колонки:
+                                    -
+                                        Тип: СтандартнаяКолонкаТаблицы<СвойстваТокенаДоступа, Строка>
+                                        Значение: =ДанныеСтроки.Идентификатор
+                                    -
+                                        Тип: СтандартнаяКолонкаТаблицы<СвойстваТокенаДоступа, Строка>
+                                        Значение: =ДанныеСтроки.Расшифровка
+                                    -
+                                        Тип: СтандартнаяКолонкаТаблицы<СвойстваТокенаДоступа, Строка>
+                                        Значение: =ДанныеСтроки.Описание
+                                Команды:
+                                    Тип: ФрагментКомандногоИнтерфейса
+                                    Элементы:
+                                        - =Компоненты.ТаблицаУтверждения.ДобавитьСтроку
+                                КомандыСтроки:
+                                    Тип: ФрагментКомандногоИнтерфейса<КомандаСПараметром<СвойстваТокенаДоступа>>
+                                    Элементы:
+                                        - =Компоненты.ТаблицаТокеныДоступа.Удалить
+                                ПустыеСостояния:
+                                    Тип: ПредставленияПустыхСостоянийСписка
+                                    НетДанныхДляОтображения:
+                                        Тип: ПредставлениеПустогоСостоянияСписка
+                                        Заголовок: Пусто
+                                        Изображение:
+                                            Тип: ДвоичныйОбъект.Ссылка
+                                            Значение: ФайлКонтур.svg
+                                        Пояснение: Токены доступа отсутствуют
 Свойства:
     -
         Имя: Пользователь
@@ -258,3 +299,6 @@
     -
         Имя: Утверждения
         Тип: ИсточникДанныхМассив<СвойстваУтвержденияПользователя>
+    -
+        Имя: ТокеныДоступа
+        Тип: ИсточникДанныхМассив<СвойстваТокенаДоступа>
